--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "ethers": "^5.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
